--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,4 +1,5 @@
-
+{% extends 'task/login_base.html' %}
+{% block body %}
 
 <div class="row">
   <div class="col-md-4"></div>
@@ -13,4 +14,5 @@
   <div class="col-md-4"></div>
 </div>
 
+{% endblock %}
 
